--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
+    "start": "nodemon src/server.js",
     "dev": "nodemon",
     "test": "jest"
   },
